Launchpad automatic translations update.

--- a/po/de.po
+++ b/po/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-09-15 14:43+0000\n"
+"PO-Revision-Date: 2014-09-16 15:06+0000\n"
 "Last-Translator: Tobias Bannert <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-09-16 08:31+0000\n"
+"X-Launchpad-Export-Date: 2014-09-17 07:23+0000\n"
 "X-Generator: Launchpad (build 17196)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -159,10 +159,10 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
 "latest.html#exec-variables for a list of supported arguments."
 msgstr ""
-"Das Programm soll mit Argumenten ausgeführt werden. Dieser Schlüssel wird "
-"benötigt, wenn DBusActivatable nicht auf \"Wahr\" gesetzt ist oder wenn "
-"Kompatibilität mit der D-Bus Aktivierung nicht gegeben ist.\n"
-"Für eine Liste von unterstützten Argumenten siehe "
+"Programm mit Argumenten auszuführen. Dieser Schlüssel wird benötigt, wenn\n"
+"DBusActivatable nicht auf »Wahr« gestellt ist oder wenn Sie Kompatibilität\n"
+"mit Implementierungen benötigen, die die D-Bus-Aktivierung nicht verstehen.\n"
+"Für eine Liste von unterstützten Argumenten:\n"
 "http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
 "latest.html#exec-variables"
 
@@ -214,9 +214,8 @@ msgid ""
 "If set to \"True\", this entry will not be shown in menus, but will be "
 "available for MIME type associations etc."
 msgstr ""
-"Wenn dieser Wert auf \"Wahr\" gesetzt wird, wird diese Eintrag in Menüs "
-"nicht angezeigt. Er ist aber für Assoziationen mit Dateitypen (MIME Typen) "
-"verfügbar."
+"Wenn auf »AN« gestellt, wird dieser Eintrag in den Menüs nicht angezeigt. Er "
+"wird aber für Dateitypenverknüpfungen (MIME-Typen) usw. zur Verfügung stehen."
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Hide from menus"
@@ -330,10 +329,10 @@ msgid ""
 "searching entries. These are not meant for display, and should not be "
 "redundant with the values of Name or GenericName."
 msgstr ""
-"Eine Liste von Schlüsselwörtern für diesen Eintrag. Sie können zur "
-"Verbesserung der Suchergebnisse hinzugefügt werden. Sie sind also nicht für "
-"die Anzeige gedacht und sollten nicht mit dem Namen der Anwendung oder ihrer "
-"allgemeinen Bezeichnung redundant sein."
+"Eine Liste von Schlagwörtern, um diesen Eintrag zu beschreiben. Sie können "
+"diese benutzen, um Einträge besser zu finden. Diese sind nicht zur Anzeige "
+"gedacht und sollten nicht die Werte aus »Name« und »Allgemeiner Name« "
+"enthalten."
 
 #: ../data/ui/MenulibreWindow.ui.h:66
 msgid "Keywords"
