Launchpad automatic translations update.

--- a/po/ms.po
+++ b/po/ms.po
@@ -14,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-09-21 06:16+0000\n"
+"X-Launchpad-Export-Date: 2014-09-22 06:57+0000\n"
 "X-Generator: Launchpad (build 17196)\n"
 "Language: ms\n"
 
@@ -160,6 +160,11 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
 "latest.html#exec-variables for a list of supported arguments."
 msgstr ""
+"Program untuk dilakukan dengan argumen. Kunci ini diperlukan jika "
+"DBusActivatable tidak ditetapkan menjadi \"Benar\" atau jika anda perlukan "
+"keserasian dengan perlaksanaan yang tidak memahami pengaktifan D-Bus.\n"
+"Sila rujuk http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-"
+"spec-latest.html#exec-variables untuk senarai argumen yang disokong."
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Command"
@@ -266,6 +271,10 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"Senarai persekitaran yang tidak seharusnya papar masukan ini. Anda hanya "
+"boleh guna kunci ini jika \"OnlyShowIn\" tidak ditetapkan.\n"
+"Nilai yang mungkin termasuklah: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
+"Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:57
 msgid "Not Shown In"
@@ -279,6 +288,11 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"Satu senarai persekitaran yang patutu paparkan masukan ini. Lain-lain "
+"persekitaran tidak akan paparkan masukan ini. Anda hanya boleh guna kunci "
+"ini jika \"NotShowIn\" tidak ditetapkan.\n"
+"Nilai yang mungkin termasuklah: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
+"Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Only Shown In"
@@ -290,6 +304,9 @@ msgid ""
 "file is not present or is not executable, this entry may not be shown in a "
 "menu."
 msgstr ""
+"Laluan ke fail bolehlaku untuk tentukan jika program telah dipasang. Jika "
+"fail tidak hadir atau tidak bolehlaku, masukan ini tidak ditunjukkan dalam "
+"menu."
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Try Exec"
@@ -309,6 +326,9 @@ msgid ""
 "searching entries. These are not meant for display, and should not be "
 "redundant with the values of Name or GenericName."
 msgstr ""
+"Senarai kata  kunci untuk jelaskan masukan ini. Anda boleh guna ini untuk "
+"bantu menggelintar masukan. Ia tidak bermaksud untuk paparan, dan tidak "
+"seharusnya digandakan dengan nilai Name atau GenericName."
 
 #: ../data/ui/MenulibreWindow.ui.h:66
 msgid "Keywords"
@@ -345,6 +365,10 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html "
 "for more information."
 msgstr ""
+"Tetapkan kunci ini kepada \"Benar\" jika pengaktifan D-Bus disokong untuk "
+"aplikasi ini dan anda mahu gunakannya.\n"
+"Sila rujuk http://standards.freedesktop.org/desktop-entry-"
+"spec/latest/ar01s07.html untuk maklumat lanjut."
 
 #: ../data/ui/MenulibreWindow.ui.h:73
 msgid "DBUS Activatable"
