--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-09-17 19:44+0000\n"
-"Last-Translator: Jean Marc <Unknown>\n"
+"PO-Revision-Date: 2014-09-24 16:23+0000\n"
+"Last-Translator: Yannick Le Guen <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-09-18 07:07+0000\n"
+"X-Launchpad-Export-Date: 2014-09-25 06:52+0000\n"
 "X-Generator: Launchpad (build 17196)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -168,7 +168,7 @@ msgstr "Commande"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "The working directory."
-msgstr ""
+msgstr "Le répertoire de travail"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Working Directory"
@@ -185,6 +185,8 @@ msgstr "<b>Détails de l’application</b>"
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "If set to \"True\", the program will be ran in a terminal window."
 msgstr ""
+"Si réglé sur « Vrai », le programme sera exécuté dans une fenêtre de "
+"terminal."
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Run in terminal"
@@ -195,6 +197,9 @@ msgid ""
 "If set to \"True\", a startup notification is sent. Usually means that a "
 "busy cursor is shown while the application launches."
 msgstr ""
+"Si réglé sur « Vrai », une notification de démarrage est envoyée. Cela "
+"signifie habituellement qu'un curseur de chargement (par ex. un sablier) est "
+"affiché pendant que l'application démarre."
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "Use startup notification"
@@ -205,6 +210,8 @@ msgid ""
 "If set to \"True\", this entry will not be shown in menus, but will be "
 "available for MIME type associations etc."
 msgstr ""
+"Si réglé sur « Vrai », cette entrée ne sera pas visible dans les menus, mais "
+"sera toujours disponible pour les associations de type MIME, etc."
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Hide from menus"
@@ -248,7 +255,7 @@ msgstr "Actions"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Generic name of the application, for example \"Web Browser\"."
-msgstr ""
+msgstr "Nom générique de l'application, par exemple « Navigateur Internet »."
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "Generic Name"
