Launchpad automatic translations update.

--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-09-24 16:23+0000\n"
-"Last-Translator: Yannick Le Guen <Unknown>\n"
+"PO-Revision-Date: 2014-09-17 19:44+0000\n"
+"Last-Translator: Jean Marc <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-09-25 06:52+0000\n"
+"X-Launchpad-Export-Date: 2014-10-05 06:24+0000\n"
 "X-Generator: Launchpad (build 17196)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -161,6 +161,12 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
 "latest.html#exec-variables for a list of supported arguments."
 msgstr ""
+"Programme a exécuter avec des arguments. Cette clé est requise si "
+"DBusActivatable est réglé sur « Vrai » ou si vous avez besoin d'une "
+"compatibilité avec des implémentations qui ne gèrent pas l'activation D-"
+"Bus.\n"
+"Voir http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
+"latest.html#exec-variables pour une liste des arguments pris en charge."
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Command"
@@ -268,6 +274,10 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"Une liste des environnements qui ne devraient pas afficher cette entrée. "
+"Vous ne pouvez utiliser cette clé que si « Afficher seulement dans » est "
+"défini. Parmi les valeurs possibles : GNOME, KDE, LXDE, MATE, Razor, ROX, "
+"TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:57
 msgid "Not Shown In"
@@ -281,6 +291,10 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"Une liste des environnements qui devraient afficher cette entrée. Les autres "
+"environnements n'afficheront pas cette entrée. Vous ne pouvez utiliser cette "
+"clé que si « Ne pas afficher dans » est défini. Parmi les valeurs possibles "
+": GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Only Shown In"
@@ -292,6 +306,9 @@ msgid ""
 "file is not present or is not executable, this entry may not be shown in a "
 "menu."
 msgstr ""
+"Chemin vers un exécutable pour déterminer si le programme est installé. Si "
+"le fichier n'est pas présent ou n'est pas exécutable, cette entrée ne pourra "
+"pas être affichée dans un menu."
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Try Exec"
@@ -311,6 +328,9 @@ msgid ""
 "searching entries. These are not meant for display, and should not be "
 "redundant with the values of Name or GenericName."
 msgstr ""
+"Une liste de mots-clé pour décrire cette entrée. Vous pouvez les utiliser "
+"pour rechercher des entrées. Ils ne seront pas affichés et ne devraient pas "
+"être redondants avec le Nom ou le Nom générique de l'entrée."
 
 #: ../data/ui/MenulibreWindow.ui.h:66
 msgid "Keywords"
@@ -331,6 +351,8 @@ msgid ""
 "If set to \"True\", the result for the user is equivalent to the .desktop "
 "file not existing at all."
 msgstr ""
+"Si réglé sur « Vrai », ce sera comme si le fichier .desktop n'existait pas "
+"du tout aux yeux de l'utilisateur."
 
 #: ../data/ui/MenulibreWindow.ui.h:70
 msgid "Hidden"
@@ -343,6 +365,10 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html "
 "for more information."
 msgstr ""
+"Régler cette clé sur « Vrai » si l'activation D-Bus est prise en charge pour "
+"cette application et que vous voulez l'utiliser.\n"
+"Voir http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html "
+"pour plus d'informations."
 
 #: ../data/ui/MenulibreWindow.ui.h:73
 msgid "DBUS Activatable"
