--- a/po/ja.po
+++ b/po/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-09-15 04:33+0000\n"
-"Last-Translator: Kiyotaka Nemoto <Unknown>\n"
+"PO-Revision-Date: 2014-04-12 01:41+0000\n"
+"Last-Translator: ub <xenolith0bytetestcomgreen@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-09-16 08:31+0000\n"
+"X-Launchpad-Export-Date: 2014-10-05 06:25+0000\n"
 "X-Generator: Launchpad (build 17196)\n"
 "Language: ja\n"
 
