--- a/po/he.po
+++ b/po/he.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-04-15 05:10+0000\n"
+"PO-Revision-Date: 2014-10-14 05:03+0000\n"
 "Last-Translator: GenghisKhan <genghiskhan@gmx.ca>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-10-05 06:24+0000\n"
+"X-Launchpad-Export-Date: 2014-10-14 07:14+0000\n"
 "X-Generator: Launchpad (build 17196)\n"
 "Language: he\n"
 
@@ -167,7 +167,7 @@ msgstr "פקודה"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "The working directory."
-msgstr ""
+msgstr "ספריית עבודה."
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Working Directory"
@@ -183,7 +183,7 @@ msgstr "<b>פרטי יישום</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "If set to \"True\", the program will be ran in a terminal window."
-msgstr ""
+msgstr "אם קבוע אל \"True\", התוכנית תורץ בתוך חלון מסוף."
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Run in terminal"
@@ -247,7 +247,7 @@ msgstr "פעולות"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Generic name of the application, for example \"Web Browser\"."
-msgstr ""
+msgstr "שם כללי של יישום, לדוגמא \"דפדפן רשת\"."
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "Generic Name"
@@ -291,7 +291,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "The MIME type(s) supported by this application."
-msgstr ""
+msgstr "טיפוס(י) MIME נתמכים על ידי יישום זה."
 
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid "Mimetypes"
