--- a/po/he.po
+++ b/po/he.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-10-14 05:03+0000\n"
+"PO-Revision-Date: 2014-10-20 12:24+0000\n"
 "Last-Translator: GenghisKhan <genghiskhan@gmx.ca>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-10-15 06:17+0000\n"
-"X-Generator: Launchpad (build 17196)\n"
+"X-Launchpad-Export-Date: 2014-10-21 07:28+0000\n"
+"X-Generator: Launchpad (build 17203)\n"
 "Language: he\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -69,19 +69,19 @@ msgstr "<b>בחירת תמונה</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:10
 msgid "16px"
-msgstr ""
+msgstr "16px"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "32px"
-msgstr ""
+msgstr "32px"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid "64px"
-msgstr ""
+msgstr "64px"
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "128px"
-msgstr ""
+msgstr "128px"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "<b>Preview</b>"
@@ -287,7 +287,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Try Exec"
-msgstr ""
+msgstr "Try Exec"
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "The MIME type(s) supported by this application."
@@ -326,7 +326,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:70
 msgid "Hidden"
-msgstr ""
+msgstr "Hidden"
 
 #: ../data/ui/MenulibreWindow.ui.h:71
 msgid ""
@@ -565,7 +565,7 @@ msgstr "תוצאות חיפוש"
 
 #: ../menulibre/MenulibreApplication.py:822
 msgid "ThisEntry"
-msgstr ""
+msgstr "ThisEntry"
 
 #: ../menulibre/MenulibreApplication.py:840
 msgid "Select a category"
