--- a/po/ru.po
+++ b/po/ru.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-04-23 19:57+0000\n"
+"PO-Revision-Date: 2014-12-21 08:21+0000\n"
 "Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-10-05 06:25+0000\n"
-"X-Generator: Launchpad (build 17196)\n"
+"X-Launchpad-Export-Date: 2014-12-22 07:08+0000\n"
+"X-Generator: Launchpad (build 17286)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -246,7 +246,7 @@ msgstr "Действия"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Generic name of the application, for example \"Web Browser\"."
-msgstr ""
+msgstr "Обобщённое название приложения, например, «Веб-браузер»."
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "Generic Name"
