--- a/po/pl.po
+++ b/po/pl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-05-20 10:28+0000\n"
+"PO-Revision-Date: 2015-01-03 17:39+0000\n"
 "Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
 "Language-Team: polski <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-10-05 06:25+0000\n"
-"X-Generator: Launchpad (build 17196)\n"
+"X-Launchpad-Export-Date: 2015-01-04 06:37+0000\n"
+"X-Generator: Launchpad (build 17286)\n"
 "Language: \n"
 
 #: ../menulibre.desktop.in.h:1
@@ -184,6 +184,7 @@ msgstr "<b>Szczegóły programu</b>"
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "If set to \"True\", the program will be ran in a terminal window."
 msgstr ""
+"Jeśli ustawiono na \"True\", to program będzie uruchamiany w oknie terminala."
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Run in terminal"
@@ -291,7 +292,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "The MIME type(s) supported by this application."
-msgstr ""
+msgstr "Rodzaj(e) MIME obsługiwane przez ten program."
 
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid "Mimetypes"
