--- a/po/nl.po
+++ b/po/nl.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-03-03 18:24+0000\n"
-"Last-Translator: Pjotr12345 <Unknown>\n"
+"PO-Revision-Date: 2015-01-05 18:30+0000\n"
+"Last-Translator: Wybo Dekker <wybo@dekkerdocumenten.nl>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-10-05 06:24+0000\n"
-"X-Generator: Launchpad (build 17196)\n"
+"X-Launchpad-Export-Date: 2015-01-06 07:18+0000\n"
+"X-Generator: Launchpad (build 17286)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Menubewerker"
+msgstr "Menu bewerken"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
@@ -27,19 +27,19 @@ msgstr "Toepassingen aan het menu toevoegen of daaruit verwijderen"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
-msgstr "_Starter toevoegen"
+msgstr "Starter toevoegen"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Directory"
-msgstr "_Map toevoegen"
+msgstr "Map toevoegen"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Add _Separator"
-msgstr "Scheidings_lijn toevoegen"
+msgstr "Scheidingslijn toevoegen"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Icon Selection"
-msgstr "Pictogramselectie"
+msgstr "Icoonselectie"
 
 #: ../data/ui/MenulibreWindow.ui.h:5 ../menulibre/MenulibreApplication.py:1042
 #: ../menulibre/MenulibreApplication.py:1166
@@ -56,11 +56,11 @@ msgstr "Toepassen"
 
 #: ../data/ui/MenulibreWindow.ui.h:7
 msgid "Icon Name"
-msgstr "Pictogramnaam"
+msgstr "Icoonnaam"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Image File"
-msgstr "Afbeeldingbestand"
+msgstr "Beeldbestand"
 
 #: ../data/ui/MenulibreWindow.ui.h:9
 msgid "<b>Select an image</b>"
