--- a/po/lt.po
+++ b/po/lt.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2015-03-20 19:33+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2015-03-21 17:03+0000\n"
+"Last-Translator: Moo <hazap@hotmail.com>\n"
 "Language-Team: Lithuanian <lt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-03-21 05:37+0000\n"
+"X-Launchpad-Export-Date: 2015-03-22 05:31+0000\n"
 "X-Generator: Launchpad (build 17405)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -259,10 +259,13 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"Aplinkų, kurios neturėtų rodyti šio įrašo, sąrašas. Galite naudoti šį raktą "
+"tik tuo atveju, jei nėra nustatytas \"RodomaTik\".\n"
+"Galimos reikšmės:  GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:57
 msgid "Not Shown In"
-msgstr ""
+msgstr "Nerodoma"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
 msgid ""
@@ -272,10 +275,14 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"Aplinkų, kurios turėtų rodyti šį įrašą, sąrašas. Kitos aplinkos šio įrašo "
+"nerodys. Galite naudoti šį raktą tik tuo atveju, jei nėra nustatytas "
+"\"Nerodoma\".\n"
+"Galimos reikšmės:  GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Only Shown In"
-msgstr ""
+msgstr "Rodoma Tik"
 
 #: ../data/ui/MenulibreWindow.ui.h:61
 msgid ""
