--- a/po/lt.po
+++ b/po/lt.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2015-03-25 21:34+0000\n"
+"PO-Revision-Date: 2015-03-27 13:47+0000\n"
 "Last-Translator: Moo <hazap@hotmail.com>\n"
 "Language-Team: Lithuanian <lt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-03-26 05:28+0000\n"
+"X-Launchpad-Export-Date: 2015-03-28 05:33+0000\n"
 "X-Generator: Launchpad (build 17413)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -394,15 +394,15 @@ msgstr "Skirtukas"
 #. Standard Items
 #: ../menulibre/MenulibreApplication.py:59
 msgid "Multimedia"
-msgstr ""
+msgstr "Multimedija"
 
 #: ../menulibre/MenulibreApplication.py:60
 msgid "Development"
-msgstr ""
+msgstr "Programavimas"
 
 #: ../menulibre/MenulibreApplication.py:61
 msgid "Education"
-msgstr ""
+msgstr "Švietimas"
 
 #: ../menulibre/MenulibreApplication.py:62
 msgid "Games"
@@ -418,7 +418,7 @@ msgstr "Internetas"
 
 #: ../menulibre/MenulibreApplication.py:65
 msgid "Office"
-msgstr ""
+msgstr "Raštinė"
 
 #: ../menulibre/MenulibreApplication.py:66
 msgid "Settings"
@@ -439,7 +439,7 @@ msgstr "WINE"
 #. Desktop Environment
 #: ../menulibre/MenulibreApplication.py:71
 msgid "Desktop configuration"
-msgstr ""
+msgstr "Darbalaukio konfigūracija"
 
 #: ../menulibre/MenulibreApplication.py:72
 msgid "User configuration"
@@ -692,6 +692,8 @@ msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
 msgstr ""
+"Visi pakeitimai nuo paskutinės išsaugotos būsenos bus prarasti ir negalės "
+"būti automatiškai atkurti."
 
 #: ../menulibre/MenulibreApplication.py:2700
 msgid "Are you sure you want to delete this separator?"
