--- a/po/ru.po
+++ b/po/ru.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-12-21 08:21+0000\n"
-"Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
+"PO-Revision-Date: 2015-05-13 17:59+0000\n"
+"Last-Translator: mopase <i.mopase@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-12-22 07:08+0000\n"
-"X-Generator: Launchpad (build 17286)\n"
+"X-Launchpad-Export-Date: 2015-05-14 05:01+0000\n"
+"X-Generator: Launchpad (build 17493)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -56,7 +56,7 @@ msgstr "Применить"
 
 #: ../data/ui/MenulibreWindow.ui.h:7
 msgid "Icon Name"
-msgstr "Название значка"
+msgstr "Имя значка"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Image File"
